--- a/SeleniumprojectB20/pom.xml
+++ b/SeleniumprojectB20/pom.xml
@@ -21,6 +21,15 @@
         <artifactId>webdrivermanager</artifactId>
         <version>4.1.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+
+    <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+    <dependency>
+        <groupId>org.testng</groupId>
+        <artifactId>testng</artifactId>
+        <version>7.1.0</version>
+        <scope>test</scope>
+    </dependency>
 
 
 
