--- a/SeleniumprojectB20/pom.xml
+++ b/SeleniumprojectB20/pom.xml
@@ -48,9 +48,23 @@
         <artifactId>javafaker</artifactId>
         <version>1.0.2</version>
     </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>4.1.2</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>4.1.2</version>
+        </dependency>
 
 
 
-</dependencies>
+
+
+    </dependencies>
 
 </project>
