--- a/RestAssured_B20/pom.xml
+++ b/RestAssured_B20/pom.xml
@@ -43,7 +43,11 @@
             <version>5.7.0</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.10.5.1</version>
+        </dependency>
 
     </dependencies>
 
