--- a/RestAssured_B20/configuration.properties
+++ b/RestAssured_B20/configuration.properties
@@ -9,3 +9,13 @@ spartan.database.password=SP
 library1.database.url=jdbc:mysql://18.233.97.71:3306/library1
 library1.database.username=library1_client
 library1.database.password=WVF4NdGXCKHeE6VQ
+
+#Adding Spartan app with auth information
+spartan.base_url1=http://54.90.101.103:8000
+spartan.admin.username=admin
+spartan.admin.password=admin
+spartan.editor.username=editor
+spartan.editor.password=editor
+spartan.user.username=user
+spartan.user.password=user
+spartan.base_url=http://3.92.227.102:8000
