--- a/RestAssured_B20/configuration.properties
+++ b/RestAssured_B20/configuration.properties
@@ -1,6 +1,12 @@
-database.url=jdbc:oracle:thin:@3.92.227.102:1521:XE
-database.username=hr
-database.password=hr
+
+# Oracle Rest Data Service generated
+# Rest API information
+ords.baseURL=http://54.90.101.103:1000
+ords.basePath=/ords/hr
+# Oracle Database Connection INFO
+hr.database.url=jdbc:oracle:thin:@54.90.101.103:1521:XE
+hr.database.username=hr
+hr.database.password=hr
 
 spartan.database.url=jdbc:oracle:thin:@3.92.227.102:1521:XE
 spartan.database.username=SP
