--- a/RestAssured_B20/pom.xml
+++ b/RestAssured_B20/pom.xml
@@ -68,6 +68,13 @@
             <artifactId>lombok</artifactId>
             <version>1.18.16</version>
         </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>json-schema-validator</artifactId>
+            <version>4.3.2</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 
